--- a/index.html
+++ b/index.html
@@ -1,54 +1,28 @@
 <!DOCTYPE html> 
 <html>
-<div id="wrap">
 <head>
 	<title>HOME</title>
 	<link type="text/css" rel="stylesheet" href="style.css"/>
-		
-	<h1>
-		<img src="eee.png">
-		
-		<div class="topLinks">
+</head>
+<body>
+	<div class="topLinks">
 			<a href="profile.html">HOME</a>
 			<a href="profile.html">PROFILE</a>
 			<a href="new1.html">CONTACTS</a>
-		</div>
-	</h1>
-	
-</head>
-
-<body>
-	
+	</div>
 
 	<div id="promiseBox">
-
-        <div style="width:840px; height:400px; border: 0px solid #868686">
-
 			<a href="profile.html">New Promises</a>
 			<a href="profile.html">Current Promises</a>
-			
-
-			<div id="container" style="z-index: 1px; min-width: 310px; height: 300px; margin: 0 auto"></div>
-		</div>	
 	</div>
-		
-	<div id="bg">
-	<img src="helping-hand.jpg" alt="">
-	</div>
-
-</body>
-
-<div id="foot">
-	<center>
-	<div class="bottomLinks">
-			
+<footer>
+	<nav class="bottomLinks">
 			<a href="index.html">About Us</a>
 			<a href="profile.html">Community</a>
 			<a href="new1.html">Education</a>
 			<a >(c) HelpingHands, 2014</a>
-	</div>
-	</center>
-</div>
+	</nav>
+</footer>
 
-</div>
+</body>
 </html>
