--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
 <body>
 	<div class="topLinks">
 			<a href="profile.html">HOME</a>
-			<a href="profile.html">PROFILE</a>
-			<a href="new1.html">CONTACTS</a>
+			<a href="profile.html">ACCOUNT</a>
+			<a href="new1.html">MESSAGES</a>
 	</div>
 
 	<div id="promiseBox">
-			<a href="profile.html">New Promises</a>
-			<a href="profile.html">Current Promises</a>
+			<img src="helpLogo.png">
+			<a href="newPromises.html">Add New Promise</a>
+			<p> </p>
+			<a href="currentPromises.html">Current Promises</a>
 	</div>
 <footer>
 	<nav class="bottomLinks">
