--- a/newPromises.html
+++ b/newPromises.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html>
 <head>
-	<title>HOME</title>
+	<title>NEW PROMISE</title>
 	<link type="text/css" rel="stylesheet" href="style.css"/>
 </head>
 <body>
@@ -11,34 +11,24 @@
 			<a href="new1.html">MESSAGES</a>
 	</div>
 
-	<div id="promiseBox">
-					<div class="scrollCont">		
-			<div id="contact1"class="contactInput">
-			<p>Name:</p>
-			<input id="contact1Name"class="textbox"type="text">
-			<p>Telephone:</p>
-			<input id="contact1Phone" class="textbox"type="text">
-			<p>E-mail:</p>
-			<input id="contact1Email" class="textbox"type="text">
-			
-			<a href="#" class="saveButton">SAVE</a>
-			<hr>
-			</div>	
-			
-			
-		
-			<div id="contact2"class="contactInput">
-			<p>Name:</p>
-			<input id="contact2Name"class="textbox"type="text">
-			<p>Telephone:</p>
-			<input id="contact2Phone" class="textbox"type="text">
-			<p>E-mail:</p>
-			<input id="contact2Email" class="textbox"type="text">
-
-			<a href="#" class="saveButton">SAVE</a>
-			</div>
-		
-		</div>
+	<div id="fillBox">	
+			<p>Title:</p>
+			<input id="title"class="textbox" placeholder = "Tell responders what you need"type="text">	
+			<p>Name of Organization:</p>
+			<input id="name"class="textbox" placeholder = "Tell responders your organization"type="text">
+			<p>Address:</p>
+			<input id="address" class="textbox" placeholder = "Your location" type="text">
+			<p>E-Mail:</p>
+			<input id="address" class="textbox" placeholder = "e-mail" type="text">
+			<p>Number:</p>
+			<input id="number" class="textbox" placeholder = "Phone number" type="text">
+			<p>Resource Need:</p>
+			<input id="rNeed" class="textbox" placeholder = "Briefly describe your needs" type="text">
+			<p>Resource Current:</p>
+			<input id="rCurrent" class="textbox" placeholder = "Quantify your current resources" type="text">
+			<p></p>
+			<a href="#" class="saveButton">ENTER</a>		
+	
 	</div>
 <footer>
 	<nav class="bottomLinks">
