--- a/currentPromises.html
+++ b/currentPromises.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html>
 <head>
-	<title>HOME</title>
+	<title>CURRENT PROMISES</title>
 	<link type="text/css" rel="stylesheet" href="style.css"/>
 </head>
 <body>
@@ -11,11 +11,16 @@
 			<a href="new1.html">MESSAGES</a>
 	</div>
 
-	<div id="promiseBox">
-			<img src="http://min.us/i/Z6Kou8yjSAl1">
-			<a href="newPromises.html">Add New Promise</a>
+	<div id="needsBox">
+			<a href="water.html">Salvation Army: 30 Gallons of Water</a>
 			<p> </p>
-			<a href="currentPromises.html">Current Promises</a>
+			<a href="hotFood.html">Red Cross: 50 Hot Meals</a>
+			<p> </p>
+			<a href="dog.html">Animal Haven: $5000 for Surgery</a>
+			<p> </p>
+			<a href="cans.html">Red Cross: 1000 Cans of Food</a>
+			<p> </p>
+			<a href="petition.html">Greenpeace: 10,000 Signatures</a>
 	</div>
 <footer>
 	<nav class="bottomLinks">
