--- a/promise1.html
+++ b/promise1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html>
 <head>
-	<title>HOME</title>
+	<title>PROMISE</title>
 	<link type="text/css" rel="stylesheet" href="style.css"/>
 </head>
 <body>
@@ -11,11 +11,14 @@
 			<a href="new1.html">MESSAGES</a>
 	</div>
 
-	<div id="promiseBox">
-			<img src="http://min.us/i/Z6Kou8yjSAl1">
-			<a href="newPromises.html">Add New Promise</a>
-			<p> </p>
-			<a href="currentPromises.html">Current Promises</a>
+	<div id="needsBox">
+			<p id = "respondTitle">Salvation Army </p>
+			<p></p>
+			<p>We need 30 gallons of water to send to Alameda County.</p>
+			<p></p>
+			<p>Please click respond to let us know what you can donate.</p>
+			<p></p>
+			<a href="#" class="saveButton">RESPOND</a>
 	</div>
 <footer>
 	<nav class="bottomLinks">
