--- a/currentPromises.html
+++ b/currentPromises.html
@@ -12,7 +12,7 @@
 	</div>
 
 	<div id="needsBox">
-			<a href="water.html">Salvation Army: 30 Gallons of Water</a>
+			<a href="promise1.html">Salvation Army: 30 Gallons of Water</a>
 			<p> </p>
 			<a href="hotFood.html">Red Cross: 50 Hot Meals</a>
 			<p> </p>
