--- a/promise1.html
+++ b/promise1.html
@@ -12,13 +12,13 @@
 	</div>
 
 	<div id="needsBox">
-			<p id = "respondTitle">Salvation Army </p>
+			<p id = "respondTitle"><b><strong>Salvation Army</strong></b></p>
 			<p></p>
 			<p>We need 30 gallons of water to send to Alameda County.</p>
 			<p></p>
 			<p>Please click respond to let us know what you can donate.</p>
 			<p></p>
-			<a target="_blank" href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=websa@salvationarmy.org&body=my-text" class="saveButton">RESPOND</a>
+			<button target="_blank" href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=websa@salvationarmy.org&body=my-text" class="saveButton">RESPOND</button>
 	</div>
 <footer>
 	<nav class="bottomLinks">
