--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 </head>
 <body>
 	<div class="topLinks">
-			<a href="profile.html">HOME</a>
+			<a href="index.html">HOME</a>
 			<a href="profile.html">ACCOUNT</a>
 			<a href="new1.html">MESSAGES</a>
 	</div>
 
 	<div id="promiseBox">
-			<img src="http://min.us/i/Z6Kou8yjSAl1">
+			<img src="http://i1.minus.com/jbbUCKWnG1pFdf.png">
 			<a href="newPromises.html">Add New Promise</a>
 			<p> </p>
 			<a href="currentPromises.html">Current Promises</a>
