--- a/promise1.html
+++ b/promise1.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<div class="topLinks">
-			<a href="profile.html">HOME</a>
+			<a href="index.html">HOME</a>
 			<a href="profile.html">ACCOUNT</a>
 			<a href="new1.html">MESSAGES</a>
 	</div>
