--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	</div>
 
 	<div id="promiseBox">
-			<img src="http://i1.minus.com/jbbUCKWnG1pFdf.png">
+			<img src="helpLogo.png">
 			<a href="newPromises.html">Add New Promise</a>
 			<p> </p>
 			<a href="currentPromises.html">Current Promises</a>
