--- a/promise1.html
+++ b/promise1.html
@@ -18,7 +18,7 @@
 			<p></p>
 			<p>Please click respond to let us know what you can donate.</p>
 			<p></p>
-			<button target="_blank" href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=websa@salvationarmy.org&body=my-text" class="saveButton">RESPOND</button>
+			<a target="_blank" href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=websa@salvationarmy.org&body=my-text" class="button saveButton">RESPOND</a>
 	</div>
 <footer>
 	<nav class="bottomLinks">
