--- a/newPromises.html
+++ b/newPromises.html
@@ -27,7 +27,7 @@
 			<p>Resource Current:</p>
 			<input id="rCurrent" class="textbox" placeholder = "Quantify your current resources" type="text">
 			<p></p>
-			<button href="#" class="saveButton">ENTER</button>		
+			<button onclick="window.location.href='recieved.html'" href="recieved.html" class="saveButton">ENTER</button>		
 	
 	</div>
 <footer>
