--- a/indexLogged.html
+++ b/indexLogged.html
@@ -6,23 +6,21 @@
 </head>
 <body>
 	<div class="topLinks">
-
+			<a href="index.html">HOME</a>
+			<a href="profile.html">ACCOUNT</a>
+			<a href="new1.html">MESSAGES</a>
 	</div>
 	
-	
 
-	<div id="promiseBox" >
+	<div id="promiseBox">
 		<div style="float: none; margin-bottom: 2rem">
 			<img class="logo" style="width: 70%;" src="helpLogo.png">
 		</div>
 
-			<p style="font-size: 1.5rem;">A better way to see what your community needs.</p>
-			<button class="tfbutton" onclick="window.location.href='newUser.html'" href="browse.html.html">Sign Up</button>
-			<button class="tfbutton" onclick="window.location.href='logIn.html'" href="browse.html.html">Log In</button>
+			<p style="font-size: 1.5rem;">Welcome, Dude!</p>
+			<p style="font-size: 1.5rem;">Search the needs for your community.</p>
 
-			<p style="font-size: 1.5rem;">Or just start searching.</p>
-
-			<form id="tfnewsearch" method="get" >
+			<form id="tfnewsearch" method="get" action="search in database">
 		        <input type="text" class="tftextinput" name="q" size="21" maxlength="120"><input style="width: 5em;" onclick="window.location.href='searchResults.html'" href="postings.html" type="submit" value="search" class="tfbutton">
 			<button class="tfbutton" onclick="window.location.href='browse.html'" href="browse.html.html">Browse</button>
 			</form>
