--- a/orgAccountPublic.html
+++ b/orgAccountPublic.html
@@ -11,32 +11,86 @@
 			<a href="new1.html">MESSAGES</a>
 	</div>
 	
-	<div style="padding-top: 7%; width: 100%; height: 9%; background-color: rgba(0,0,0, 0.5);">
+	<div id="introBox">
 			<div style="float: left; width: 20%; margin-bottom: 2rem">
 			<img style="width: 70%;" src="helpLogo.png">
 			</div>
 			
-			<div style="float: right; width: 10%; margin-bottom: 2rem">
-			<p>Welcome</p>
-			<p id="orgName">Person who is viewing this</p>	
+			<div style="float: right; margin: 0 2rem 2rem 0">
+			<a href="contAccount.html" id="orgName">Serena Xu</a>	
+			<a action="logOut">Log Out</a>
 			</div>
 	</div>
 	
-	<div id="box" style="padding: 3% 3% 3% 3%; margin: 2% auto 0 auto; width: 40%; height: 50%;">
-		<header class="orgName">Organization Name</header>
-		<div class="profileImg">
-			<img src="salvationArmy.jpg" height="100%">
-		</div>
-		<div>
-			<label>Desciption</label>
-			<p class="orgDes">This organization has a mission to blah blah blah and stuff
-				This is obviously a placeholder.</p>
-			<label>Location</label>
-			<p class="orgLoc">We are located throughout the United States</p>
-			<label>Contact</label>
-			<p class="orgNum">415222323</p>
-			<p class="orgEmail">something@something.org</p>
-		</div>
+	<div id="box" style="padding: 3% 3% 3% 3%; margin: 2% auto 0 auto; width: 40%;">
+		<header class="reqHead" style="margin: 2% auto 5% auto; text-align: center;">Salvation Army</header>
+			<div class="profileImg">
+			<img src="images/salvationArmy.jpg" height="100%">
+			</div>
+
+			<ul class="account">
+				<li>
+					<div style="width: 35%; float: left; height: 80%;">
+						<label for="name">Description:</label>
+					</div>
+
+					<div style="width: 65%; float: right; height: 80%;">
+					<p class="orgDes">The Salvation Army, an international movement, is an evangelical part of the universal Christian church. Its message is based on the Bible. Its ministry is motivated by the love of God. Its mission is to preach the gospel of Jesus Christ and to meet human needs in His name without discrimination.</p>
+					</div>
+					
+				</li>
+
+				<li><hr></li>
+
+				<li>
+					<div style="width: 35%; float: left; height: 80%;">
+						<label for="name">Location:</label>
+					</div>
+
+					<div style="width: 65%; float: right; height: 80%;">
+					<p class="orgDes">We have many locations through the United States.</p>
+					</div>
+				</li>
+
+				<li><hr></li>
+
+				<li>
+					<div style="width: 35%; float: left; height: 80%;">
+						<label for="name">Phone Number:</label>
+					</div>
+
+					<div style="width: 65%; float: right; height: 80%;">
+					<p class="orgDes">415-222-8323</p>
+					</div>
+				</li>
+
+				<li><hr></li>
+
+				<li>
+					<div style="width: 35%; float: left; height: 80%;">
+						<label for="name">E-mail:</label>
+					</div>
+
+					<div style="width: 65%; float: right; height: 80%;">
+					<p class="orgDes">something@something.org</p>
+					</div>
+				</li>
+
+				<li><hr></li>
+
+				<li>
+					<div style="width: 35%; float: left; height: 80%;">
+						<label for="name">Website:</label>
+					</div>
+
+					<div style="width: 65%; float: right; height: 80%;">
+					<p class="orgDes">www.salvationarmy.org</p>
+					</div>
+				</li>
+
+				<li><hr></li>
+
+			</ul>
 		
 	</div>
 
