--- a/searchResults.html
+++ b/searchResults.html
@@ -16,95 +16,148 @@
 			<img style="width: 70%;" src="helpLogo.png">
 			</div>
 			
-			<div style="float: right; width: 10%; margin-bottom: 2rem">
-			<p>Welcome</p>
-			<p>Person or Org!</p>		
+			<div class="log" style="float: right; margin-bottom: 2rem">
+				<a href="contAccount.html">Serena Xu</a>
+				<a action="logOut">Log Out</a>	
 			</div>
 	</div>
 
-
+	<div class="overflowBox">
 	<div id="box" style="margin: 5% auto 0 auto; width: 50%; padding: 2%;">
-		<div style="float: left; width= 40%;">
+		<header class="fulfilled" style="margin-bottom: 1em;">Needs</header>
+
+		<nav style="width: 90%; margin: 0 auto 5em auto;">
+		<div style="float: left; width: 70%;">
 			<form id="tfnewsearch" method="get" >
-		        <input type="text" class="tftextinput" name="q" size="21" maxlength="120"><input style="width: 5em;" type="submit" value="search" class="tfbutton">
+		        <input class="search" type="text" class="tftextinput" name="q" size="21" maxlength="120"><input style="width: 5em;" type="submit" value="Search" class="tfbutton">
 			</form>
-	</div>
+		</div>
 
-	<div style="float: center;">
-		<p>Sort by:</p>
-	</div>
-
-	<div style="float: right; width: 5em;">
-			<select class="tfbutton">
-				<option value="date">None</option>
+		<div style="float: right; height: 2em; width: 8em;">
+			<select class="tfbutton" style="width: 100%; height: 100%;">
+				<option value="date">Sort By</option>
   				<option value="volvo">Date</option>
   				<option value="saab">Organization</option>
   				<option value="mercedes">Needs</option>
   				<option value="mercedes">Location</option>
 			</select>
 	</div>
-
+	</nav>
 
 			<div class="tfclear"></div>
 			
 		<ul class="searchResults">
 			<li class="searchItem">
-				<div class="inboxm">
+				<div class="searchPost">
 					<div class="photo">
-						<img alt="OrganizationName" class="photo" src="profile.jpg">
+						<img alt="OrganizationName" class="photo" src="images/salvationArmy.jpg">
 					</div>
 					<div class="searchContent">
-						<span>
-							Org name
-						</span>
+						<label class="searchOrgName">
+							Salvation Army
+						</label>
 						<div class="date">
-							<span>6/16/14</span>
+							<p>6/16/14</p>
 						</div>
 						<p></p>
-						<a id="request" href="request1.html">
-							this is a preview of the request
+						<a id="searchReqPreview" href="request1.html">
+							this is a preview of the request and it goes on....
 						</a>
 					</div>
 				</div>
 			</li>
+
+			<li><hr class="style-six"></hr></li>
+
 			<li class="searchItem">
-				<div class="inboxm">
+				<div class="searchPost">
 					<div class="photo">
 						<img alt="OrganizationName" class="photo" src="profile.jpg">
 					</div>
 					<div class="searchContent">
-						<span>
+						<label class="searchOrgName">
 							Org name
-						</span>
+						</label>
 						<div class="date">
-							<span>6/16/14</span>
+							<p>6/16/14</p>
 						</div>
 						<p></p>
-						<a id="request" href="request1.html">
-							this is a preview of the request
+						<a id="searchReqPreview" href="request1.html">
+							this is a preview of the request and it goes on....
 						</a>
 					</div>
 				</div>
 			</li>
+
+			<li><hr class="style-six"></hr></li>
+
 			<li class="searchItem">
-				<div class="inboxm">
+				<div class="searchPost">
 					<div class="photo">
 						<img alt="OrganizationName" class="photo" src="profile.jpg">
 					</div>
 					<div class="searchContent">
-						<span>
+						<label class="searchOrgName">
 							Org name
-						</span>
+						</label>
 						<div class="date">
-							<span>6/16/14</span>
+							<p>6/16/14</p>
 						</div>
 						<p></p>
-						<a id="request" href="request1.html">
-							this is a preview of the request
+						<a id="searchReqPreview" href="request1.html">
+							this is a preview of the request and it goes on....
 						</a>
 					</div>
 				</div>
 			</li>
+
+			<li><hr class="style-six"></hr></li>
+
+			<li class="searchItem">
+				<div class="searchPost">
+					<div class="photo">
+						<img alt="OrganizationName" class="photo" src="profile.jpg">
+					</div>
+					<div class="searchContent">
+						<label class="searchOrgName">
+							Org name
+						</label>
+						<div class="date">
+							<p>6/16/14</p>
+						</div>
+						<p></p>
+						<a id="searchReqPreview" href="request1.html">
+							this is a preview of the request and it goes on....
+						</a>
+					</div>
+				</div>
+			</li>
+
+			<li><hr class="style-six"></hr></li>
+
+			<li class="searchItem">
+				<div class="searchPost">
+					<div class="photo">
+						<img alt="OrganizationName" class="photo" src="profile.jpg">
+					</div>
+					<div class="searchContent">
+						<label class="searchOrgName">
+							Org name
+						</label>
+						<div class="date">
+							<p>6/16/14</p>
+						</div>
+						<p></p>
+						<a id="searchReqPreview" href="request1.html">
+							this is a preview of the request and it goes on....
+						</a>
+					</div>
+				</div>
+			</li>
+
+			<li><hr class="style-six"></hr></li>
+		</ul>
+	</div>
 	</div>
 	
 <footer>
