--- a/newOrg.html
+++ b/newOrg.html
@@ -4,20 +4,14 @@
 	<title>NEW ORGANIZATION</title>
 	<link type="text/css" rel="stylesheet" href="style.css"/>
 
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-	<script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.8/jquery.validate.min.js"></script>
-	<script type="text/javascript"> $(document).ready(function(){ $("#subForm").validate(); }); </script>
-	<script src="hands.js"></script>
+	<script type="text/javascript" src="jquery-1.3.2.min.js"></script>
+	<script type="text/javascript" src="HHCustom.js"></script>
+	<script type="text/javascript" src="HHCustomPhone.js"></script>
 
 </head>
 <body>
 	<div class="topLinks">
 			<a href="index.html">HOME</a>
-
-		<!--
-			<a href="profile.html">ACCOUNT</a>
-			<a href="new1.html">MESSAGES</a>
-		-->
 	</div>
 	
 	<div id="introBox">
@@ -25,62 +19,60 @@
 			<img class="logo" style="width: 70%;" src="helpLogo.png">
 			</div>
 			
-			<div style="float: right; width: 10%; margin-bottom: 2rem">
-			<a href="newUser.html">SIGN UP</a>
-			<a href="logIn.html">LOG IN</a>		
+			<div class="log" style="float: right; width: 10%; margin-bottom: 2rem">
+			<a href="newUser.html">Sign Up</a>
+			<a href="logIn.html">Log In</a>		
 			</div>
 	</div>
+		
+	<div id="box" style="padding: 3% 3% 3% 3%; margin: 2% auto 0 auto; width: 40%;">
+		<header class="fulfilled" style="margin-bottom: 5%;">Register Your Organization</header>
 
-	<div id="newAcctBox" style="height: 22em;">
-		<div class="socialSign">
-			<header>Skip the long form</header>
-			<a href="fb.html">Register with Facebook</a>
-			<p></p>
-			<a href="fb.html">Register with Google Plus</a>
-		</div>
-		
-		<div class="vertLine" style="height: 100%">
-		</div>
-		
-		<div class="longSign">
-			<form action="orgVerify.html" method="post" id="subForm">
-			<header>Register</header>
-			<ul>
+		<p style="text-align: center;">*Required Fields</p>
+
+
+		<form onsubmit="return validateEmail()"method="post" id="subForm">
+			<ul class="longSign">
+
 				<li>
-					<label for="name">Organization:</label> <input type="text" placeholder="This is your username" name="name" id="name" required />
+					<label for="name">* Organization:</label> <input type="text" placeholder="This is your username" name="name" id="name" required />
 				</li>
 				<li>
-					<label for="name">Address:</label> <input type="text" name="name" id="name" required />
+					<label for="address">* Address:</label> <input type="text" name="address" id="address" required />
 				</li>
 				<li>
-					<label for="name">Name of Contact:</label> <input type="text" name="name" id="name"/>
+					<label for="contact">Name of Contact:</label> <input type="text" name="contact" id="contact"/>
 				</li>
 				<li>
-					<label for="name">Phone Number:</label> <input type="tel" name="name" required />
+					<label for="phone">* Phone Number:</label> <input type="tel" id="phone" id="phone" required/><p style="margin:0; text-align: center;" id="phoneInfo"></p>
 				</li>
 				<li>
-					<form action="IsEmail()"><label for="l133578-133578">Email:</label> <input type="email" name="cm-133578-133578" required  /></form></li>
-				<p></p>
-				<li>
-					<label for="l133578-133578">LinkedIn URL:</label> <input type="URL" name="linkedin" id="linkedin"/>
-				</li>
-				<li>
-					<label for="l133578-133578">Facebook URL:</label> <input type="URL" name="facebook" id="facebook"/>
+					<label for="email">* E-mail:</label> <input type="email" name="email" id="email"/>
+					<p style="margin:0; text-align: center;" id="emailInfo"></p>
 				</li>
 				<p></p>
 				<li>
-					<label for="l133578-133578">Create a password:</label> <input type="text" name="cm-133578-133578" id="pword" required/>
+					<label for="linkedin">LinkedIn URL:</label> <input type="URL" name="linkedin" id="linkedin"/>
 				</li>
 				<li>
-					<label for="l133578-133578">Type password again:</label> <input type="text" name="cm-133578-133578" id="pwordVer"  required/>
+					<label for="facebook">Facebook URL:</label> <input type="URL" name="facebook" id="facebook"/>
+				</li>
+				<p></p>
+				<li>
+					<label for="pword">* Create a password:</label> <input type="text" name="pword" id="pword" required/>
+				</li>
+				<li>
+					<label for="pwordVer">* Type password again:</label> <input type="text" name="pwordVer" id="pwordVer" required/>
 				</li>
 				<li><p></p><p></p></li>
-				<input class="tfbutton" type="submit" value="Submit for Verification" />
+				<input class="tfbutton" type="submit" value="Submit for Verification">
+				<!--
+				<button class="tfbutton" onclick="return validateForm();" href="orgVerify.html">Submit for Verification</button>
+			-->
 			</ul>
 
-			</form>
-		</div>
-	
+		</form>  
+
 	</div>
 <footer>
 	<nav class="bottomLinks">
