--- a/orgAccount.html
+++ b/orgAccount.html
@@ -16,15 +16,15 @@
 			<img style="width: 70%;" src="helpLogo.png">
 			</div>
 			
-			<div style="float: right; width: 10%; margin-bottom: 2rem">
-			<p>Welcome</p>
-			<p id="orgName">Organization</p>	
+			<div class="log" style="float: right; margin: 0 2rem 2rem 0">
+			<a href="contAccount.html" id="orgName">Salvation Army</a>	
+			<a action="logOut">Log Out</a>
 			</div>
 	</div>
 
-	<div id="contentBox" style="margin: 5% auto 5% auto; width: 80%;">
+	<div class="overflowBox" style="margin: 5% auto 5% auto; width: 80%;">
 		<div id="box" style="float: left; width: 40%;">
-			<header class="orgName">Salvation Army</header>
+			<header class="reqHead" style="margin: 2% auto 5% auto; text-align: center;">Salvation Army</header>
 			<div class="profileImg">
 			<img src="images/salvationArmy.jpg" height="100%">
 			</div>
@@ -36,7 +36,7 @@
 					</div>
 
 					<div style="width: 65%; float: right; height: 80%;">
-					<p class="orgDes">This organization has a mission to blah blah blah and stuff. This is obviously a placeholder.</p>
+					<p class="orgDes">The Salvation Army, an international movement, is an evangelical part of the universal Christian church. Its message is based on the Bible. Its ministry is motivated by the love of God. Its mission is to preach the gospel of Jesus Christ and to meet human needs in His name without discrimination.</p>
 					</div>
 					
 				</li>
@@ -98,15 +98,15 @@
 		</div>
 
 		<div class="reqAcctBox"> 
-			<div id="box" style="height: 20em; margin-bottom: 3%; overflow-y: scroll;">
+			<div id="box" style="height: 15em; margin-bottom: 3%;">
 				<div>
 					<button class="tfbutton" onclick="window.location.href='orgAccount.html'" href="postings.html">Make New Request</button>
 				</div>
 
+				<header class="reqHead" style="margin: 2% auto 2% auto; text-align: center;">Active Requests</header>
+
 				<div style="height: 85%; overflow-y: scroll">
 					<nav id="menu">
-						<p id="label" style= "text-align: center; margin-bottom: 0.2em">Active Requests</p>
-						<hr>
 						<ul class="parent-menu">
 						<li>
 							<a href="#">
@@ -125,10 +125,11 @@
 				</div>	
 
 			</div>
-			<div id="box" style=" height: 20em;  overflow-y: scroll;">
-				<nav id="menu">
-						<p id="label" style= "text-align: center; margin-bottom: 0.2em">Request History</p>
-						<hr>
+			<div id="box" style=" height: 20em; ">
+				<header class="reqHead" style="margin: 2% auto 2% auto; text-align: center;">Request History</header>
+
+				<div style="height: 85%; overflow-y: scroll">
+					<nav id="menu">
 						<ul class="parent-menu">
 						<li>
 							<a href="#">
@@ -156,6 +157,7 @@
 						</li>
 						</ul>
 					</nav>
+				</div>
 			</div>
 		</div>
 
