--- a/contAccountEdit.html
+++ b/contAccountEdit.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html>
 <head>
-	<title>MY ACCOUNT</title>
+	<title>Edit Account</title>
 	<link type="text/css" rel="stylesheet" href="style.css"/>
 </head>
 <body>
@@ -16,65 +16,110 @@
 			<img style="width: 70%;" src="helpLogo.png">
 			</div>
 			
-			<div style="float: right; width: 10%; margin-bottom: 2rem">
-			<p>Welcome</p>
-			<p id="contName">Serena Xu!</p>	
+			<div style="float: right; margin: 0 2rem 2rem 0">
+			<a href="contAccount.html" id="orgName">Serena Xu</a>	
+			<a action="logOut">Log Out</a>
 			</div>
 	</div>
-	
-	<div id="box" style="padding: 2%; margin: 2% auto 0 auto; width: 80%; height: 25%;">
-		<center><header class="orgName">Serena Xu</header></center>
-		<div style="width: 20%; float: left;">
-		<div class="profileImg">
-			<img src="profile.jpg" height="100%">
-		</div>
-		</div>
-		<button class="tfbutton" onclick="new photo'" href="postings.html">Upload New Photo</button>
-		<div style="float: right; width: 50%;">		
+
+	<div id="contentBox" style="margin: 5% auto 5% auto; width: 80%; ">
+		<div id="box" style="float: left; width: 40%;">
+			<header class="orgName">Serena Xu</header>
+
+			<div>
 			<ul>
-				<li><label for="name">Name:</label> 
-						<input type="text" name="name" id="name" required /></li>
-				<li><label for="name">Location:</label> <input type="text" name="name" id="name" required /></li>
-				<li><label for="name">Phone Number:</label> <input type="tel" name="name" id="name" required /></li>
-				<li><label for="l133578-133578">Email:</label> <input type="text" name="cm-133578-133578" id="email"  required /></li>
-				<p></p>
-				<li><label >Facebook Profile:</label> <input type="text"/></li>
+
+				<li><hr></li>
+
 				<li>
-					<p></p><p></p>
+					<label for="name">Name:</label> <input placeholder="Serena Xu" type="text" name="name" id="name" required />
 				</li>
+
+				<li><hr></li>
+
+				<li>
+					<label for="name">Location:</label> <input placeholder="San Francisco" type="text" name="location" id="location"/>
+				</li>
+
+				<li><hr></li>
+
+				<li>
+					<label for="phone">Phone Number:</label> <input placeholder="415-233-4567" type="tel" name="phone" id="phone" required />
+				</li>
+
+				<li><hr></li>
+
+				<li>
+					<label for="email">Email:</label> <input placeholder="something@gmail.com" type="email" name="email" id="email"  required />
+				</li>
+				
 			</ul>
-			<button class="tfbutton" onclick="window.location.href='contAccount.html'" href="postings.html">Save Changes</button>
+			</div>
+			<p></p>
+			<button class="tfbutton" onclick="window.location.href='orgAccount.html'" href="postings.html">Save Changes</button>			
+
 		</div>
-		
-	</div>
 
-	<div id="box" style="padding: 2%; width: 45%; height: 35%; float: left; margin: 2% 2% 2% auto;">
-			<nav id="menu">
-						<p id="label" style= "margin-bottom: 0.2em">Active Contributions</p>
-						<hr id="titleLine">
-						<ul class="parent-menu">
-						<li><center><a href="#">Contribution 1</a></center>
-						</li>
-						<li><center><a href="#">Contribution 2</a></center>
-						</li>
-						</ul>
-					</nav>
+		<div class="reqAcctBox"> 
+			<div id="box" style="height: 15em; margin-bottom: 3%;">
 
-	</div>
-	
-		<div id="box" style="padding: 2%; width: 45%; height: 35%; float: right; margin: 2% 2% 2% auto;">
+				<header class="reqHead" style="margin: 2% auto 2% auto; text-align: center;">Active Donations</header>
+
+				<div style="height: 85%; overflow-y: scroll">
 					<nav id="menu">
-						<p id="label" style= "margin-bottom: 0.2em">Contribution History</p>
-						<hr id="titleLine">
 						<ul class="parent-menu">
-						<li><center><a href="#">Contribution 1</a></center>
+						<li>
+							<a href="#">
+								<div style="float: left;">Request Name</div>
+								<div style="float: right;">6/20/14</div>
+							</a>							
 						</li>
-						<li><center><a href="#">Contribution 2</a></center>
-						</li>
-						<li><center><a href="#">Contribution 3</a></center>
+						<li>
+							<a href="#">
+								<div style="float: left;">Request Name</div>
+								<div style="float: right;">6/16/14</div>
+							</a>							
 						</li>
 						</ul>
 					</nav>
+				</div>	
+
+			</div>
+			<div id="box" style=" height: 20em; ">
+				<header class="reqHead" style="margin: 2% auto 2% auto; text-align: center;">Donation History</header>
+
+				<div style="height: 85%; overflow-y: scroll">
+					<nav id="menu">
+						<ul class="parent-menu">
+						<li>
+							<a href="#">
+								<div style="float: left;">Request Name</div>
+								<div style="float: right;">6/13/14</div>
+							</a>							
+						</li>
+						<li>
+							<a href="#">
+								<div style="float: left;">Request Name</div>
+								<div style="float: right;">5/10/14</div>
+							</a>							
+						</li>
+						<li>
+							<a href="#">
+								<div style="float: left;">Request Name</div>
+								<div style="float: right;">5/1/14</div>
+							</a>							
+						</li>
+						<li>
+							<a href="#">
+								<div style="float: left;">Request Name</div>
+								<div style="float: right;">4/1/14</div>
+							</a>							
+						</li>
+						</ul>
+					</nav>
+				</div>
+			</div>
+		</div>
 
 	</div>
 	
