removed unnecessary fonts

--- a/historyRequestCont.html
+++ b/historyRequestCont.html
@@ -17,7 +17,7 @@
 			</div>
 			
 			<div style="float: right; margin-bottom: 2rem">
-				<a href="orgAccount.html" id="orgName">Salvation Army!</a>	
+				<a href="orgAccount.html" id="orgName">Serena Xu</a>	
 				<a action="logOut">Log Out</a>
 			</div>
 	</div>
@@ -148,11 +148,29 @@
 		</div>
 
 		<div id="box" style="overflow-y: scroll; height: 20em; width: 40%; float: right;">
-
-			<header class="contHead">Contributors</header>
 		
 			<div style="margin-top: 8%;">
 				<ul class="requestDates">
+					<li>
+						<p>The <a href="orgAccount.html">Salvation Army</a>thanks you for your generous donation. 
+						</p>
+					</li>
+
+					<li>
+						<div style="float:left; width: 50%;">
+							<p>Your water donation made our event a great success. For more information visit <a><strong>our site.</strong></a></p>
+						</div>
+						<div style="float: right; width: 45%; margin-right: 5%;">
+							<img class="followReqPic" src="eventPic.jpg">
+						</div>
+					</li>
+						<p><a href=""><strong>Message the Organization</strong></a></p>
+					<li>
+
+				</ul>
+
+				<!--
+			<ul class="requestDates">
 				<li>
 					<div style="width: 65%; float: left; height: 80%;">
 						<a class="contName" href="contAccount.html">John Doe</a>
@@ -192,7 +210,7 @@
 
 				<li><hr></li>
 
-				</ul>
+			</ul>  -->
 			
 			</div>
 			<p></p>
